# go-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-go-bazel  bazel-out  bazel-testlogs  go.mod
